@startuml Herold Data Model
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0

title Herold -- Datenmodell (SQLite)

enum NoteStatus {
  recorded
  processed
  sent
  error
}

class voice_notes <<table>> {
  **id** : ULID <<PK>>
  --
  type : string
  status : string <<NoteStatus>>
  audio_path : string [nullable]
  transcript : text [nullable]
  processed_title : string [nullable]
  processed_body : text (markdown) [nullable]
  metadata : json [nullable]
  github_issue_number : integer [nullable]
  github_issue_url : string [nullable]
  error_message : text [nullable]
  created_at : timestamp
  updated_at : timestamp
}

class users <<table>> {
  **id** : bigint <<PK>>
  --
  name : string
  email : string <<unique>>
  password : string
  api_key_hash : string [nullable]
  totp_secret : text (encrypted) [nullable]
  totp_confirmed_at : timestamp [nullable]
  remember_token : string [nullable]
  created_at : timestamp
  updated_at : timestamp
}

' -- Relationships --

voice_notes ..> NoteStatus : status

note right of voice_notes
  **type**: general | youtube | diary
  (erweiterbar via config/herold.php)

  **metadata** (JSON):
  - youtube: { youtube_url }
  - andere Typen: typ-spezifisch
end note

note bottom of users
  Single-user system — exactly one row.
  Enforced by SQLite trigger ""enforce_users_singleton""
  (BEFORE INSERT, RAISE ABORT when count >= 1).
  Required by Laravel's auth system.
  No agent accounts (thus no Sanctum), no multi-user support planned.
end note

@enduml
